--- a/OneExam/Base.lproj/Main.storyboard
+++ b/OneExam/Base.lproj/Main.storyboard
@@ -262,11 +262,11 @@
         <scene sceneID="qMr-cS-VFY">
             <objects>
                 <viewController storyboardIdentifier="Charts" id="jTZ-Al-eW9" customClass="ChartsViewController" customModule="OneExam" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3l8-KB-TDc">
+                    <view key="view" contentMode="scaleToFill" id="Gb3-dO-vHb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="22n-Gn-tMb"/>
+                        <viewLayoutGuide key="safeArea" id="Nly-hV-dGk"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jZ7-ad-e1y" userLabel="First Responder" sceneMemberID="firstResponder"/>
